--- a/documentation/components_PopUp.jsx.html
+++ b/documentation/components_PopUp.jsx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: pages/server/submitPopUp.js</title>
+    <title>JSDoc: Source: components/PopUp.jsx</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: pages/server/submitPopUp.js</h1>
+    <h1 class="page-title">Source: components/PopUp.jsx</h1>
 
     
 
@@ -27,53 +27,30 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>import React from 'react'
-
-const popUp = {
-    position: 'fixed',
-    top: '50%',
-    left: '50%',
-    transform: 'translate(-50%, -50%)',
-    backgroundColor: 'rgb(187, 237, 210)',
-    color: 'rgb(0, 38, 25)',
-    zIndex: 1,
-    padding: '50px'
-    
-}
-
-const darkenBackground = {
-    position: 'fixed',
-    top: 0,
-    bottom: 0,
-    right: 0,
-    left: 0,
-    backgroundColor: 'rgba(0,0,0,0.7)',
-    zIndex: 1
-}
+import "../style.scss"
+import { Link } from 'react-router-dom'
 
 /**
- * Pop-up that displays that an order has been submitted successfully.
- * @param {boolean} open - determines whether pop-up will opened or closed
- * @param {HTML} children - elements to be displayed by the pop-up
- * @param {function} onClose - stops displaying pop-up when closed
- * @returns {HTML} - HTML code displaying pop-up
+ * Pop-up that displays a customer's order number and order summary. Furthermore,
+ * when done, ends a customer's order.
+ * @param {HTML} props - elements to be displayed by pop-up page
+ * @returns {HTML} - code displaying order summary pop-up page
  */
-function SubmitPopUp({ open, children, onClose}) {
-    if(!open){
-        return null
-    }
-    return (
-        &lt;>
-            &lt;div style={darkenBackground}>
+function PopUp(props) {
+    return (props.trigger) ? (
+        &lt;div className='popup'>
+            &lt;div className='popup-inner'>
+                &lt;button className="btn btn-primary close-btn" onClick={() => props.setTrigger(false)}> Back to Order &lt;/button>
+
+                {/* &lt;Link to='/pos' className='btn btn-primary'> START ORDER&lt;/Link> */}
+                &lt;Link to='/home' className='btn btn-primary continue-btn' onClick={() => props.setTrigger(false)}> Continue &lt;/Link>
+                {props.children}
             &lt;/div>
-            &lt;div style={popUp}>
-                &lt;div>{children}&lt;/div>
-                &lt;button className="btn1" onClick={onClose}>New Order!&lt;/button>
-            &lt;/div>
-        &lt;/>
-    )
+        &lt;/div>
+    ) : "";
 }
 
-export default SubmitPopUp;</code></pre>
+export default PopUp</code></pre>
         </article>
     </section>
 
